Fixes #13136 - align children fields from right

--- a/app/assets/stylesheets/patternfly_and_overrides.scss
+++ b/app/assets/stylesheets/patternfly_and_overrides.scss
@@ -23,6 +23,7 @@ fieldset > div.col-md-1 {
 
 .children_fields{
   padding-left: 20px;
+  padding-right: 20px;
 }
 
 .form-control{
